Fix dropdown hover gap + sync blog header with main site nav

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,16 @@ nav ul li.has-dropdown > a::after {
   opacity: 0.7;
 }
 
+/* Bridge the gap so hover doesn't break */
+nav ul li.has-dropdown::after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 16px;
+}
+
 .dropdown-menu {
   display: none;
   position: absolute;
